Fix highlight word matches alignment in RTL mode

--- a/package/src/rtl-layout.css
+++ b/package/src/rtl-layout.css
@@ -11,7 +11,7 @@ div.pce-rtl::before,
 }
 
 .pce-rtl textarea,
-.pce-rtl .selection-matches,
+.pce-rtl .word-matches,
 .pce-rtl .pce-matches {
 	padding: 0 var(--padding-left) 0 var(--_pse) !important;
 }
